# smolbasic55

./: .gitignore  CMakeLists.txt  README.md  array.c  asm.h  asm_amd64.cpp  asm_riscv.cpp  control.c  data.c  eval.cpp  eval.h  features.c  features.h  input.c  main.cpp  math.c  print.c  run.sh  smolmath.c  smolmath.h  smoltest.cpp  string.c  util.cpp  util.h
tests/: CAST.BAS  DODECAHEDRON.BAS  DODECAHEDRON_PLUS.BAS  Makefile.in  P008.eok  P016.eok  P020.eok  P021.eok  P030.eok  P031.eok  P035.eok  P036.eok  P038.eok  P044.ok  P063.eok  P064.eok  P065.eok  P067.eok  P068.eok  P069.eok  P070.eok  P071.eok  P072.eok  P074.eok  P075.eok  P076.eok  P077.eok  P078.eok  P079.eok  P081.eok  P082.eok  P083.eok  P084.eok  P086.eok  P087.eok  P091.eok  P097.eok  P098.eok  P101.eok  P102.eok  (+43 more)
